Fix on the build issue: Wrong Version of JDK used